(library
 (name aeron)
 (modules cooked raw)
 (public_name aeroon)
 (foreign_stubs
  (language c)
  (names aa_stubs)
  (flags (:include c_flags.sexp))
 )
 (c_library_flags (:include c_library_flags.sexp)) 
 (libraries unix logs))

; discover path of Aeron C include directory and library,
; for the environment variable AERON_ROOT
(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (action (run config/discover.exe)))