(library
 (name aeroon_bindings)
 (public_name aeroon.bindings)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-27))
 (libraries ctypes.foreign)
 (ctypes
  (external_library_name libaeroon)
  (build_flags_resolver
   (vendored
    ; AERON_ROOT environment variable required
    (c_flags -I "%{env:AERON_ROOT=/path/to/aeron}/aeron-client/src/main/c")
    (c_library_flags -L "%{env:AERON_ROOT=/path/to/aeron}/build/lib" -laeron)))
  (headers
   (include "aeronc.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
